--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "simple-react-lightbox": "^3.6.3",
     "styled-components": "^5.1.0",
     "yup": "^0.28.3"
   },
