--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immer": "^6.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.3.1",
     "react-grid-gallery": "^0.5.5",
